clean up and readme

--- a/dataset_configuration.yaml
+++ b/dataset_configuration.yaml
@@ -3,7 +3,7 @@ train: images/train
 val: images/val
 
 train_labels: labels/train
-val_labels: labels/train
+val_labels: labels/val
 
 names: 
     0: ignored regions
